--- a/backend/express-javascript/package.json
+++ b/backend/express-javascript/package.json
@@ -15,8 +15,7 @@
     "mongoose": "^8.4.1",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.3",
-    "path": "^0.12.7",
-    "pug": "^3.0.3"
+    "path": "^0.12.7"
   },
   "pnpm": {
     "overrides": {
