--- a/backend/nest-javascript/package.json
+++ b/backend/nest-javascript/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "format": "prettier --write \"**/*.js\"",
     "start": "babel-node index.js",
-    "start:dev": "nodemon",
+    "dev": "nodemon",
+    "shoot": "pnpm barrelgun shoot",
     "test": "jest",
     "test:cov": "jest --coverage",
     "test:e2e": "jest --config ./test/jest-e2e.json"
