--- a/backend/nest-typescript/.prettierrc
+++ b/backend/nest-typescript/.prettierrc
@@ -1,4 +1,10 @@
 {
+  "trailingComma": "es5",
+  "tabWidth": 2,
+  "semi": true,
   "singleQuote": true,
-  "trailingComma": "all"
+  "bracketSpacing": true,
+  "bracketSameLine": false,
+  "jsxSingleQuote": true,
+  "arrowParens": "always"
 }
