--- a/backend/nest-typescript/tsconfig.json
+++ b/backend/nest-typescript/tsconfig.json
@@ -9,8 +9,13 @@
     "target": "ES2021",
     "sourceMap": true,
     "outDir": "./dist",
-    "baseUrl": "./",
     "incremental": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+
+    /* alias importing */
+    "baseUrl": "./" /* Specify the base directory to resolve non-relative module names. */,
+    "paths": {
+        "@*": ["src/*"]
+    }
   }
 }
